# sieve-onsite

./: .cursorrules  .gitignore  .mcp.json  .pre-commit-config.yaml  .prettierignore  AGENTS.md  LICENSE  Makefile  README.md  TODO.md  pyrightconfig.json  requirements.txt
.claude/: CLAUDE.md
backend/: .dockerignore  README.md  alembic.ini  durations.jsonl  pyproject.toml
backend/app/: config.py  gateway.py  models.py  worker.py
backend/app/api/: router.py
backend/app/api/dependencies/: authorization.py
backend/app/api/routes/: admin.py  chat.py  clip.py  dataset.py  dataset_assignment.py  dataset_review.py  delivery.py  slack.py  tag.py  todo.py  user.py  video.py
backend/app/api/routes/authentication/: google.py
backend/app/blueprints/: clip.py  clip_feedback.py  dataset.py  dataset_assignment.py  dataset_review.py  delivery.py  delivery_access.py  delivery_feedback.py  invitation.py  notification_log.py  tag.py  tag_member.py  todo.py  todo_tag.py  video.py
backend/app/llm/: feedback_summarizer.py
backend/app/llm/extractors/: due_date.py  recurrence.py  tags.py
backend/app/llm/prompts/: due_date_extractor.py  orchestrator.py  recurrence_extractor.py  tag_extractor.py
backend/app/llm/tools/: todo_tools.py
backend/app/schemas/: enums.py
backend/app/schemas/authentication/: google.py
backend/app/services/: gcs_ingest.py
backend/app/stores/: clip.py  clip_feedback.py  dataset.py  dataset_assignment.py  dataset_review.py  delivery.py  delivery_access.py  delivery_feedback.py  invitation.py  notification_log.py  tag.py  tag_member.py  todo.py  video.py
backend/app/tasks/: todo_notifications.py
backend/infra/: deploy.Dockerfile  local.Dockerfile
backend/libs/database_manager/: README.md  pyproject.toml
backend/libs/database_manager/database_manager/blueprints/: base_entity.py
backend/libs/database_manager/database_manager/clients/: database_client.py
backend/libs/database_manager/database_manager/core/: settings.py
backend/libs/database_manager/database_manager/schemas/: table_names.py
backend/libs/database_manager/database_manager/store/: base_store.py
backend/libs/database_manager/database_manager/utils/: transaction_handler.py
backend/libs/fullstack_types/: README.md  pyproject.toml
backend/libs/fullstack_types/fullstack_types/: datetimes.py  environments.py  query.py
backend/libs/llm_manager/: README.md  pyproject.toml
backend/libs/llm_manager/llm_manager/: models.py
backend/libs/llm_manager/llm_manager/blueprints/: conversation_message.py
backend/libs/llm_manager/llm_manager/clients/: openai_client.py  provider_base.py
backend/libs/llm_manager/llm_manager/conversation/: conversation.py  loop.py
backend/libs/llm_manager/llm_manager/core/: settings.py  tool_handler.py
backend/libs/llm_manager/llm_manager/executor/: tool_executor.py
backend/libs/llm_manager/llm_manager/schemas/: config.py  messages.py  provider.py  tools.py
backend/libs/llm_manager/llm_manager/stores/: conversation_message.py
backend/libs/locking_manager/: README.md  pyproject.toml
backend/libs/locking_manager/locking_manager/celery/: task.py  task_id.py
backend/libs/locking_manager/locking_manager/clients/: locking_client.py  redis_client.py
backend/libs/locking_manager/locking_manager/core/: settings.py
backend/libs/logging_manager/: README.md  pyproject.toml
backend/libs/logging_manager/logging_manager/: logger.py
backend/libs/notification_manager/: README.md  pyproject.toml
backend/libs/notification_manager/notification_manager/clients/: slack_client.py
backend/libs/notification_manager/notification_manager/core/: settings.py
backend/libs/notification_manager/notification_manager/schemas/: slack.py
backend/libs/oauth_manager/: README.md  pyproject.toml
backend/libs/oauth_manager/oauth_manager/clients/: logger.py
backend/libs/oauth_manager/oauth_manager/core/: settings.py
backend/libs/oauth_manager/oauth_manager/resources/: enums.py
backend/libs/oauth_manager/oauth_manager/schemas/: google.py
backend/libs/sieve_types/: README.md  pyproject.toml
backend/libs/sieve_types/sieve_types/: enum.py
backend/libs/storage_manager/: README.md  pyproject.toml
backend/libs/storage_manager/storage_manager/clients/: gcs_client.py
backend/libs/user_management/: pyproject.toml
backend/libs/user_management/user_management/: models.py
backend/tools/alembic/: env.py
backend/tools/alembic/versions/: 1728255913_53421a80de5f_create_users.py  1738377428_a059200cccef_add_the_rest_of_items.py  1765862318_5a921011aaa8_add_user_name.py  1765951135_992aa79ed39d_create_todos_table.py  1767028384_a2a08da44ea2_add_start_at_due_at_and_due_.py  1767042356_8005c70fed50_add_recurrence_fields_to_todos.py  1767044492_e258a1c74861_add_tags_feature.py  1767048384_f3af696393fa_add_llm_conversation_messages_table.py  1767053302_bcf54455f64f_remove_start_at_add_slack_notification_.py  1767112830_6f1ba468c778_add_notification_timing_preferences_to_.py  1767112855_e3b8e48402e7_add_slack_channel_fields_to_tags.py  1767112864_9590a8596c29_add_notification_timing_override_to_.py  1767116619_3c56b92b4f99_add_description_field_to_todos.py  1767118218_e7466799dc34_add_notification_logs_table.py  1775667435_d092860741e4_add_core_domain_models.py  1775669053_77cf482f0240_add_timestamp_metadata_field_and_.py  1775669165_d7d5ae77b8ab_add_user_role_and_access_level_and_.py  1775670478_dcfab6f30a83_add_llm_conversation_messages_table.py  1775672944_07a7e4093c79_add_dataset_status_bucket_path_and_.py  1775681097_587a86d28f28_replace_clip_and_video_specific_.py  1775683897_a1b2c3d4e5f6_replace_clip_feedback_delivery_id_.py  1775684827_f6afff5c9c03_add_dataset_reviews_dataset_review_.py  1775685560_1c8ecbb29dfe_replace_dataset_status_with_lifecycle_.py
backend/tools/gcs/: download_file.py  fix_metadata_durations.py  fix_metadata_uris.py  generate_sample_metadata.py  list_bucket.py  view_videos.py
backend/tools/mcp_server/: README.md  pyproject.toml
backend/tools/mcp_server/mcp_server/: server.py
backend/tools/openapi/: sync.sh  update_api.py
(+170 files in other folders)
