[project]
name = "fullstack"
version = "0.1.0"
description = "Full stack application template"
authors = [
    {name = "Finn", email = "banks.finn@gmail.com"},
]
dependencies = [
    "fullstack_types",
    "user_management",
    "oauth_manager",
    "database_manager",
    "logging_manager",
    "locking_manager",
    "notification_manager",
    "llm_manager",
    "alembic-postgresql-enum>=1.4.0",
    "celery>=5.3.0",
    "google-auth>=2.0.0",
    "aiohttp>=3.13.2",
    "python-dateutil>=2.8.0",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.11",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.sync-pre-commit-lock]
# Run `pre-commit install` automatically if applicable
automatically-install-hooks = true
# Should we sync your pre-commit versions with your lockfile (when running lock, add, update, remove, etc.)?
disable-sync-from-lock = false
# Packages to ignore when syncing from lock
ignore = []
# Name of the pre-commit config file to sync with
pre-commit-config-file = ".pre-commit-config.yaml"

[tool.ruff]
exclude = []
line-length = 127
indent-width = 4
target-version = "py312"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.sources]
fullstack_types = { path = "libs/fullstack_types", editable = true }
user_management = { path = "libs/user_management", editable = true }
oauth_manager = { path = "libs/oauth_manager", editable = true }
database_manager = { path = "libs/database_manager", editable = true }
logging_manager = { path = "libs/logging_manager", editable = true }
locking_manager = { path = "libs/locking_manager", editable = true }
notification_manager = { path = "libs/notification_manager", editable = true }
llm_manager = { path = "libs/llm_manager", editable = true }
mcp_server = { path = "tools/mcp_server", editable = true }

[dependency-groups]
lint = ["ruff==0.6.4", "pre-commit==3.7.0"]
test = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "responses>=0.24.1",
    "ipdb>=0.13.13",
    "pdbpp>=0.10.3",
    "factory-boy>=3.3.0",
    "faker>=22.0.0",
    "fakeredis>=2.23.5",
    "freezegun>=1.4.0",
    "python-box>=7.1.1",
    "respx>=0.21.1",
    "lupa>=2.1",
]
console = ["ipython>=8.18.1", "pip>=23.3.2"]
static-type-checker = ["pyright==1.1.385"]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "console" },
    { include-group = "static-type-checker" },
    "mcp_server",
    "types-python-dateutil>=2.9.0.20251115",
    "uvicorn>=0.24.0",
]
