[project]
name = "database_manager"
version = "0.1.0"
description = "Async SQLAlchemy database abstraction and BaseEntityStore"
authors = [
    {name = "Finn", email = "finn@claralabs.com"},
]
dependencies = [
    "pydantic-settings>=2.6.1",
    "asyncpg>=0.30.0",
    "greenlet>=3.0.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"