[project]
name = "llm_manager"
version = "0.1.0"
description = "Reusable foundation for LLM-powered applications with tool calling"
authors = [
    {name = "Finn", email = "finn@claralabs.com"},
]
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
