[project]
name = "logging_manager"
version = "0.1.0"
description = "Structured logging configuration"
authors = [
    {name = "Finn", email = "finn@claralabs.com"},
]
dependencies = [
    "structlog>=24.4.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
