[project]
name = "notification_manager"
version = "0.1.0"
description = "Slack notification client library"
authors = [
    {name = "Finn", email = "finn@claralabs.com"},
]
dependencies = [
    "slack-sdk>=3.27.0",
    "pydantic-settings>=2.0.0",
    "logging_manager",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
logging_manager = { path = "../logging_manager", editable = true }
