[project]
name = "oauth_manager"
version = "0.1.0"
description = "OAuth authentication library with provider-agnostic interface"
authors = [
    {name = "Finn", email = "finn@claralabs.com"},
]
dependencies = [
    "google-auth-oauthlib>=1.2.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
