[project]
name = "sieve_types"
version = "0.1.0"
description = "Shared Pydantic types for Sieve Onsite application"
authors = [
    {name = "Finn", email = "finn@claralabs.com"},
]
dependencies = [
    "arrow>=1.3.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
