[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "user_management"
version = "0.1.0"
description = "Authentication and user management library"
authors = [
    {name = "Finn Banks", email = "banks.finn@gmail.com"},
    {name = "Finn", email = "finn@claralabs.com"},
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic[email]>=2.10.2",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    "pyjwt>=2.10.1",
    "passlib>=1.7.4",
]
readme = "README.md"
license = {text = "MIT"}

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3
